samples/_failures_safe/1761274100_263f35_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_fba4d387.c: In function ‘dijkstra’:
./samples/SAFE/__tmp_fba4d387.c:181:20: error: expected ‘)’ at end of input
  181 |         if (dist[i]
      |            ~       ^
      |                    )
./samples/SAFE/__tmp_fba4d387.c:181:9: error: expected declaration or statement at end of input
  181 |         if (dist[i]
      |         ^~
./samples/SAFE/__tmp_fba4d387.c:181:9: error: expected declaration or statement at end of input
